// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadNext renders correctly when empty 1`] = `
<aside
  css={
    Object {
      "map": undefined,
      "name": "1bttp3w",
      "next": undefined,
      "styles": "
          display: -webkit-box;
          display: -webkit-flex;
          display: -ms-flexbox;
          display: flex;
          -webkit-box-align: stretch;
          -webkit-align-items: stretch;
          -ms-flex-align: stretch;
          align-items: stretch;
          margin-top: 10rem;
          @media only screen and (max-width: 900px) {
            -webkit-box-orient: vertical;
            -webkit-box-direction: normal;
            -webkit-flex-direction: column;
            -ms-flex-direction: column;
            flex-direction: column;
            margin-top: 4rem;
          }
          @media only screen and (max-width: 500px) {
            margin-top: 2rem;
            margin-bottom: 0.5rem;
          }
        ",
    }
  }
>
  <ReadNextStory
    text="Read This Next"
  />
  <ReadNextStory
    text="You Might Enjoy"
  />
</aside>
`;

exports[`ReadNext renders correctly with articles with and without covers 1`] = `
<aside
  css={
    Object {
      "map": undefined,
      "name": "1bttp3w",
      "next": undefined,
      "styles": "
          display: -webkit-box;
          display: -webkit-flex;
          display: -ms-flexbox;
          display: flex;
          -webkit-box-align: stretch;
          -webkit-align-items: stretch;
          -ms-flex-align: stretch;
          align-items: stretch;
          margin-top: 10rem;
          @media only screen and (max-width: 900px) {
            -webkit-box-orient: vertical;
            -webkit-box-direction: normal;
            -webkit-flex-direction: column;
            -ms-flex-direction: column;
            flex-direction: column;
            margin-top: 4rem;
          }
          @media only screen and (max-width: 500px) {
            margin-top: 2rem;
            margin-bottom: 0.5rem;
          }
        ",
    }
  }
>
  <ReadNextStory
    article={
      Object {
        "cover": "https://assets-us-01.kc-usercontent.com:443/3fcf700a-30e8-4d1d-9e64-43193a89fe7a/38bbc989-70ab-4661-92cf-11efafa5ab09/sunset-219354_1920.jpg",
        "excerpt": "How I built a modern static site at no cost using Gatsby and Kentico Kontent for Content as a Service.",
        "path": "how-i-built-and-deployed-this-site-for-free",
        "title": "How I built and deployed this site for free",
      }
    }
    text="Read This Next"
  />
  <ReadNextStory
    article={
      Object {
        "excerpt": "How I built a modern static site at no cost using Gatsby and Kentico Kontent for Content as a Service.",
        "path": "how-i-built-and-deployed-this-site-for-free",
        "title": "How I built and deployed this site for free",
      }
    }
    text="You Might Enjoy"
  />
</aside>
`;

exports[`ReadNextStory renders correctly when empty 1`] = `""`;

exports[`ReadNextStory renders correctly with articles with cover 1`] = `
<ForwardRef
  className="read-next-story"
  css={
    Object {
      "map": undefined,
      "name": "k1hdfg",
      "next": undefined,
      "styles": "
          display: -webkit-box;
          display: -webkit-flex;
          display: -ms-flexbox;
          display: flex;
          -webkit-box-flex: 1;
          -webkit-flex-grow: 1;
          -ms-flex-positive: 1;
          flex-grow: 1;
          min-width: 50%;
          text-decoration: none;
          position: relative;
          text-align: center;
          color: #fff;
          background: #222 no-repeat center center;
          background-size: cover;
          overflow: hidden;
          background-image: url(https://assets-us-01.kc-usercontent.com:443/3fcf700a-30e8-4d1d-9e64-43193a89fe7a/38bbc989-70ab-4661-92cf-11efafa5ab09/sunset-219354_1920.jpg);
          :hover::before {
            background: rgba(0, 0, 0, 0.8);
            transition: all 0.2s ease;
          }
          :hover article::before {
            color: #222;
            background: #fff;
            transition: all 0.2s ease;
          }
          /*darken the image */
          ::before {
            content: \\"\\";
            display: block;
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            background: rgba(0, 0, 0, 0.7);
            transition: all 0.5s ease;
        }
        ",
    }
  }
  to="how-i-built-and-deployed-this-site-for-free"
>
  <article
    css={
      Object {
        "map": undefined,
        "name": "1b87112",
        "next": undefined,
        "styles": "
            position: relative;
            width: 80%;
            max-width: 710px;
            margin: 4rem auto;
            padding-bottom: 4rem;
            word-wrap: break-word;
            @media only screen and (max-width: 500px) {
              font-size: 0.95em;
            }
            @media only screen and (max-width: 500px) {
                width: 100%;
                margin: 2rem 16px;
                padding-bottom: 2rem;
                line-height: 1.65em;
            }
            ::before {
              content: \\"Read This Next\\";
              padding: 4px 10px 5px;
              text-transform: uppercase;
              font-size: 1.1rem;
              font-family: \\"Open Sans\\", sans-serif;
              color: rgba(255, 255, 255, 0.8);
              border: rgba(255, 255, 255, 0.5) 1px solid;
              border-radius: 4px;
              transition: all 0.5s ease;
            }
          ",
      }
    }
  >
    <h2
      css={
        Object {
          "map": undefined,
          "name": "1pqt7h3",
          "next": undefined,
          "styles": "
              margin-top: 1rem;
              color: #fff;
            ",
        }
      }
    >
      How I built and deployed this site for free
    </h2>
    <p
      css={
        Object {
          "map": undefined,
          "name": "f42olz",
          "next": undefined,
          "styles": "
              margin: 0;
              color: rgba(255, 255, 255 0.8);
              @media only screen and (max-width: 500px) {
                display:none;
              }
            ",
        }
      }
    >
      How I built a modern static site at no cost using Gatsby and Kentico Kontent for Content as a Service.
      …
    </p>
  </article>
</ForwardRef>
`;

exports[`ReadNextStory renders correctly with articles with no cover 1`] = `
<ForwardRef
  className="read-next-story"
  css={
    Object {
      "map": undefined,
      "name": "lqrpp4",
      "next": undefined,
      "styles": "
          display: -webkit-box;
          display: -webkit-flex;
          display: -ms-flexbox;
          display: flex;
          -webkit-box-flex: 1;
          -webkit-flex-grow: 1;
          -ms-flex-positive: 1;
          flex-grow: 1;
          min-width: 50%;
          text-decoration: none;
          position: relative;
          text-align: center;
          color: #fff;
          background: #222 no-repeat center center;
          background-size: cover;
          overflow: hidden;
          
          :hover::before {
            background: rgba(0, 0, 0, 0.8);
            transition: all 0.2s ease;
          }
          :hover article::before {
            color: #222;
            background: #fff;
            transition: all 0.2s ease;
          }
          /*darken the image */
          ::before {
            content: \\"\\";
            display: block;
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            background: rgba(0, 0, 0, 0.7);
            transition: all 0.5s ease;
        }
        ",
    }
  }
  to="how-i-built-and-deployed-this-site-for-free"
>
  <article
    css={
      Object {
        "map": undefined,
        "name": "1b87112",
        "next": undefined,
        "styles": "
            position: relative;
            width: 80%;
            max-width: 710px;
            margin: 4rem auto;
            padding-bottom: 4rem;
            word-wrap: break-word;
            @media only screen and (max-width: 500px) {
              font-size: 0.95em;
            }
            @media only screen and (max-width: 500px) {
                width: 100%;
                margin: 2rem 16px;
                padding-bottom: 2rem;
                line-height: 1.65em;
            }
            ::before {
              content: \\"Read This Next\\";
              padding: 4px 10px 5px;
              text-transform: uppercase;
              font-size: 1.1rem;
              font-family: \\"Open Sans\\", sans-serif;
              color: rgba(255, 255, 255, 0.8);
              border: rgba(255, 255, 255, 0.5) 1px solid;
              border-radius: 4px;
              transition: all 0.5s ease;
            }
          ",
      }
    }
  >
    <h2
      css={
        Object {
          "map": undefined,
          "name": "1pqt7h3",
          "next": undefined,
          "styles": "
              margin-top: 1rem;
              color: #fff;
            ",
        }
      }
    >
      How I built and deployed this site for free
    </h2>
    <p
      css={
        Object {
          "map": undefined,
          "name": "f42olz",
          "next": undefined,
          "styles": "
              margin: 0;
              color: rgba(255, 255, 255 0.8);
              @media only screen and (max-width: 500px) {
                display:none;
              }
            ",
        }
      }
    >
      How I built a modern static site at no cost using Gatsby and Kentico Kontent for Content as a Service.
      …
    </p>
  </article>
</ForwardRef>
`;
